--- a/courses/MDSEfreiS7/index.html
+++ b/courses/MDSEfreiS7/index.html
@@ -226,14 +226,14 @@ ul.task-list li input[type="checkbox"] {
 <tbody>
 <tr class="odd">
 <td style="text-align: center;">1</td>
-<td>Random Variables</td>
+<td>Introduction to Probability theory, <br> Random Variables</td>
 <td><a href="Slides/Lecture1_random_variables.pdf">📖</a></td>
 <td style="text-align: center;"><a href="td1.html">✍️</a></td>
 </tr>
 <tr class="even">
 <td style="text-align: center;">2</td>
-<td>Sampling, Limit theorems</td>
-<td><a href="Slides/lecture2.pdf">📖</a></td>
+<td>Continuous random variables, <br> Sampling and Limit Theorems</td>
+<td><a href="Slides/Lecture2_continuous_random_variables_sampling.pdf">📖</a></td>
 <td style="text-align: center;"><a href="td2.html">✍️</a></td>
 </tr>
 <tr class="odd">
