--- a/courses/ProbasEfreiS3/exos1.html
+++ b/courses/ProbasEfreiS3/exos1.html
@@ -284,9 +284,9 @@ ul.task-list li input[type="checkbox"] {
 </div>
 <p>Un nouveau vaccin a été testé sur 12500 personnes. 75 d’entre elles, dont 35 femmes enceintes, ont eu des réactions secondaires nécessitant une hospitalisation.</p>
 <ol type="1">
-<li><p>Sachant que ce vaccin a été administré à 680 femmes enceintes, quelle est la probabilité qu’une femme enceinte ait eu ne réaction secondaire si elle reçoit le vaccin?</p></li>
-<li><p>Quelle est la probabilité qu’une personne non enceinte ait une réaction secondaire ?</p></li>
-<li><p>Une personne a présonté des réactions secondaire, quelle est la probabilité qu’il s’agit d’une femme enceinte?</p></li>
+<li><p>Sachant que ce vaccin a été administré à 680 femmes enceintes, quelle est la probabilité qu’une femme enceinte ait eu une réaction secondaire si elle reçoit le vaccin?</p></li>
+<li><p>Quelle est la probabilité qu’une personne non enceinte ait une réaction secondaire?</p></li>
+<li><p>Une personne a présenté des réactions secondaires, quelle est la probabilité qu’il s’agit d’une femme enceinte?</p></li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
