--- a/courses/ProbasEfreiS3/exos1.html
+++ b/courses/ProbasEfreiS3/exos1.html
@@ -341,8 +341,8 @@ ul.task-list li input[type="checkbox"] {
 <div id="exr-" class="theorem exercise">
 <p><span class="theorem-title"><strong>Exercice 13 </strong></span>On choisit deux boules au hasard dans une urne contenant 8 boules blanches, 4 boules noires et 2 boules oranges. Supposons que l’on reçoive 2 euros pour chaque boule noire tirée et que l’on perde 1 euro pour chaque boule blanche tirée. Désignons les gains nets par <span class="math inline">\(X\)</span>.</p>
 <ol type="1">
-<li><p>Quelles sont les valeurs possibles pour X et les probabilités associées à ces valeurs ?</p></li>
-<li><p>Quelle est l’espérance de X ?</p></li>
+<li><p>Quelles sont les valeurs possibles pour <span class="math inline">\(X\)</span> et les probabilités associées à ces valeurs ?</p></li>
+<li><p>Quelle est l’espérance de <span class="math inline">\(X\)</span> ?</p></li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
