--- a/courses/MDSEfreiS7/index.html
+++ b/courses/MDSEfreiS7/index.html
@@ -242,7 +242,7 @@ ul.task-list li input[type="checkbox"] {
 <tr class="odd">
 <td style="text-align: center;">3</td>
 <td>Point Estimation</td>
-<td><a href="Slides/lecture3.pdf">📖</a></td>
+<td><a href="Slides/Lecture3_point_estimation.pdf">📖</a></td>
 <td></td>
 <td style="text-align: center;"><a href="td3.html">✍️</a></td>
 </tr>
