--- a/courses/MDSEfreiS7/td2.html
+++ b/courses/MDSEfreiS7/td2.html
@@ -170,10 +170,8 @@ ul.task-list li input[type="checkbox"] {
    
   <ul>
   <li><a href="#continuous-random-variables" id="toc-continuous-random-variables" class="nav-link active" data-scroll-target="#continuous-random-variables">Continuous Random Variables</a></li>
-  <li><a href="#overlinex_n" id="toc-overlinex_n" class="nav-link" data-scroll-target="#overlinex_n"><span class="math inline">\(\overline{X}_n\)</span></a></li>
-  <li><a href="#p_n" id="toc-p_n" class="nav-link" data-scroll-target="#p_n"><span class="math inline">\(P_n\)</span></a></li>
   <li><a href="#statistic" id="toc-statistic" class="nav-link" data-scroll-target="#statistic">Statistic</a></li>
-  <li><a href="#théorème-central-limite" id="toc-théorème-central-limite" class="nav-link" data-scroll-target="#théorème-central-limite">Théorème Central Limite</a></li>
+  <li><a href="#central-limit-theorem" id="toc-central-limit-theorem" class="nav-link" data-scroll-target="#central-limit-theorem">Central Limit Theorem</a></li>
   </ul>
 </nav>
     </div>
@@ -267,45 +265,53 @@ ul.task-list li input[type="checkbox"] {
 <li>What is the probability law of <span class="math inline">\(Y=|X|\)</span>.</li>
 </ol>
 </div>
-</section>
-<section id="overlinex_n" class="level2 unnumbered">
-<h2 class="unnumbered anchored" data-anchor-id="overlinex_n"><span class="math inline">\(\overline{X}_n\)</span></h2>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 2.9 (Law of <span class="math inline">\(\overline{X}_n\)</span>) </strong></span>A population is composed of 3 employees A, B and C aged respectively 23, 37 and 45 years.</p>
-<p>One employee is chosen at random.</p>
-<ol type="1">
-<li><p>Define the random experiment <span class="math inline">\(\varepsilon\)</span>, the population <span class="math inline">\(\Omega\)</span>, the probability <span class="math inline">\(P\)</span> and the random variable <span class="math inline">\(X\)</span> studied.</p></li>
-<li><p>Calculate <span class="math inline">\(E(X)=m\)</span> and <span class="math inline">\(V(X)=\sigma^2\)</span>. What do <span class="math inline">\(E(X)\)</span> and <span class="math inline">\(V(X)\)</span> represent?</p></li>
-</ol>
-<p>We now randomly select a sample of 2 employees.</p>
-<ol start="3" type="1">
-<li>Define the new random experiment <span class="math inline">\(\varepsilon_n\)</span>, the set of samples <span class="math inline">\(E_n\)</span> and the random variables <span class="math inline">\(X_i, i=1,\ldots,n\)</span>.</li>
-<li>Define the random variable <span class="math inline">\(\overline{X}_n\)</span> and calculate its probability distribution.</li>
-<li>Calculate <span class="math inline">\(E(\overline{X}_n)\)</span> and <span class="math inline">\(V(\overline{X}_n)\)</span> to find the formulas seen during the lecture.</li>
-</ol>
-</div>
-</section>
-<section id="p_n" class="level2 unnumbered">
-<h2 class="unnumbered anchored" data-anchor-id="p_n"><span class="math inline">\(P_n\)</span></h2>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 2.10 (Law of <span class="math inline">\(P_n\)</span>) </strong></span>A population is composed of 3 individuals A, B and C whose voting results for a certain candidate are respectively: No, No and Yes.</p>
-<p>One individual is chosen at random.</p>
-<ol type="1">
-<li><p>Define the random experiment <span class="math inline">\(\varepsilon\)</span>, the population <span class="math inline">\(\Omega\)</span>, the probability <span class="math inline">\(P\)</span> and the random variable <span class="math inline">\(X\)</span> studied.</p></li>
-<li><p>alculate <span class="math inline">\(E(X)=m\)</span> and <span class="math inline">\(V(X)=\sigma^2\)</span>. What does <span class="math inline">\(E(X)\)</span> represent?</p></li>
-</ol>
-<p>We now randomly select a sample of 2 individuals.</p>
-<ol start="3" type="1">
-<li>Define the new random experiment <span class="math inline">\(\varepsilon_n\)</span>, the set of samples <span class="math inline">\(E_n\)</span> and the random variables <span class="math inline">\(X_i, i=1,\ldots,n\)</span>.</li>
-<li>Define the random variable <span class="math inline">\(\overline{X}_n\)</span> and calculate its probability distribution.</li>
-<li>Calculate <span class="math inline">\(E(P_n)\)</span> and <span class="math inline">\(V(P_n)\)</span> to find the formulas seen during the lecture.</li>
-</ol>
-</div>
+<!-- 
+## $\overline{X}_n$ {-}
+
+::: {#exr-}
+## Law of $\overline{X}_n$
+
+A population is composed of 3 employees A, B and C aged respectively 23, 37 and 45 years.
+
+One employee is chosen at random.
+
+1. Define the random experiment $\varepsilon$, the population $\Omega$, the probability $P$ and the random variable $X$ studied.
+
+2. Calculate $E(X)=m$ and $V(X)=\sigma^2$. What do $E(X)$ and $V(X)$ represent?
+
+We now randomly select a sample of 2 employees.
+
+3. Define the new random experiment $\varepsilon_n$, the set of samples $E_n$ and the random variables $X_i, i=1,\ldots,n$. 
+4. Define the random variable $\overline{X}_n$ and calculate its probability distribution.
+5. Calculate $E(\overline{X}_n)$ and $V(\overline{X}_n)$ to find the formulas seen during the lecture.
+:::
+
+
+## $P_n$ {-}
+
+::: {#exr-}
+## Law of $P_n$
+
+A population is composed of 3 individuals A, B and C whose voting results for a certain candidate are respectively: No, No and Yes.
+
+One individual is chosen at random.
+
+1. Define the random experiment $\varepsilon$, the population $\Omega$, the probability $P$ and the random variable $X$ studied.
+
+2. alculate $E(X)=m$ and $V(X)=\sigma^2$. What does $E(X)$ represent?
+
+We now randomly select a sample of 2 individuals.
+
+3. Define the new random experiment $\varepsilon_n$, the set of samples $E_n$ and the random variables $X_i, i=1,\ldots,n$. 
+4. Define the random variable $\overline{X}_n$ and calculate its probability distribution.
+5. Calculate $E(P_n)$ and $V(P_n)$ to find the formulas seen during the lecture.
+::: 
+-->
 </section>
 <section id="statistic" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="statistic">Statistic</h2>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 2.11 </strong></span>Is it a random variable?</p>
+<p><span class="theorem-title"><strong>Exercise 2.9 </strong></span>Is it a random variable?</p>
 <ol type="1">
 <li>Mean of the population.</li>
 <li>Size of the population.</li>
@@ -318,10 +324,10 @@ ul.task-list li input[type="checkbox"] {
 </ol>
 </div>
 </section>
-<section id="théorème-central-limite" class="level2 unnumbered">
-<h2 class="unnumbered anchored" data-anchor-id="théorème-central-limite">Théorème Central Limite</h2>
+<section id="central-limit-theorem" class="level2 unnumbered">
+<h2 class="unnumbered anchored" data-anchor-id="central-limit-theorem">Central Limit Theorem</h2>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 2.12 </strong></span>With weight problems on the rise in the European population, a new study has began to measure the relationship between weight and the amount of calories consumed per capita. Previous studies show that a European capita consumes an average of <span class="math inline">\(2700\)</span> calories per day with a standard deviation of <span class="math inline">\(800\)</span>. In this study, we have a sample of <span class="math inline">\(500\)</span> Europeans.</p>
+<p><span class="theorem-title"><strong>Exercise 2.10 </strong></span>With weight problems on the rise in the European population, a new study has began to measure the relationship between weight and the amount of calories consumed per capita. Previous studies show that a European capita consumes an average of <span class="math inline">\(2700\)</span> calories per day with a standard deviation of <span class="math inline">\(800\)</span>. In this study, we have a sample of <span class="math inline">\(500\)</span> Europeans.</p>
 <ol type="1">
 <li>Define the random variables studied. We name them <span class="math inline">\(X_i\)</span> and <span class="math inline">\(\overline{X}_n\)</span>.</li>
 <li>Use the CLT to give the distribution of the random variable <span class="math inline">\(\overline{X}_n\)</span>.</li>
@@ -329,7 +335,7 @@ ul.task-list li input[type="checkbox"] {
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 2.13 </strong></span>Paul and his 9 friends would like to go bowling. They decide to gather their pocket money and hope to get the total amount needed. We can suppose that the pocket money of each one is a random variable <span class="math inline">\(X_i\)</span> which follows the exponential law of parameter <span class="math inline">\(\lambda=0.06\)</span>. Its density is then <span class="math display">\[
+<p><span class="theorem-title"><strong>Exercise 2.11 </strong></span>Paul and his 9 friends would like to go bowling. They decide to gather their pocket money and hope to get the total amount needed. We can suppose that the pocket money of each one is a random variable <span class="math inline">\(X_i\)</span> which follows the exponential law of parameter <span class="math inline">\(\lambda=0.06\)</span>. Its density is then <span class="math display">\[
 f(x)=0.06 e^{-0.06 x} \times 1_{\mathbb{R}^+}(x)
 \]</span></p>
 <p>Moreover, we admit that <span class="math inline">\(X_i\)</span> are independent.</p>
