--- a/courses/MDSEfreiS7/td3.html
+++ b/courses/MDSEfreiS7/td3.html
@@ -251,7 +251,7 @@ ul.task-list li input[type="checkbox"] {
 <li>Let <span class="math inline">\(T_{n}=2 \overline{X}_{n}\)</span> be estimator of <span class="math inline">\(a\)</span> using the method of moments. Show that <span class="math inline">\(T_{n}\)</span> is an unbiased estimator of <span class="math inline">\(a\)</span> and calculate its mean squarred error.</li>
 <li>Let <span class="math inline">\(T_{n}^{\prime}=\max \left(X_{1}, \ldots, X_{n}\right)\)</span>. Show that <span class="math inline">\(T_n^{\prime}\)</span> is the maximum likelihood estimator of <span class="math inline">\(a\)</span>.</li>
 <li>Give the distribution function of <span class="math inline">\(T_{n}^{\prime}\)</span>. Deduce a density of <span class="math inline">\(T_{n}^{\prime}\)</span>, then its bias and its squared risk.</li>
-<li>Let <span class="math inline">\(T_{n}^{\prime}=\displaystyle \frac{n+1}{n} T_{n}^{\prime}\)</span>. Determine its bias and its mean squarred error.</li>
+<li>Let <span class="math inline">\(T_{n}^{\prime \prime}=\displaystyle \frac{n+1}{n} T_{n}^{\prime}\)</span>. Determine its bias and its mean squarred error.</li>
 <li>For large values of <span class="math inline">\(n\)</span>, what is the best estimator of <span class="math inline">\(a\)</span>?</li>
 </ol>
 </div>
