--- a/courses/MLEfreiS7/TD2.html
+++ b/courses/MLEfreiS7/TD2.html
@@ -176,7 +176,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./TD4.html" class="sidebar-item-text sidebar-link">Lab4: Neural Networks</a>
+  <a href="./TD4.html" class="sidebar-item-text sidebar-link">Lab4: Starting with Neural Networks</a>
   </div>
 </li>
     </ul>
