--- a/courses/MLEfreiS7/TD1.html
+++ b/courses/MLEfreiS7/TD1.html
@@ -176,7 +176,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./TD4.html" class="sidebar-item-text sidebar-link">Lab4: Neural Networks</a>
+  <a href="./TD4.html" class="sidebar-item-text sidebar-link">Lab4: Starting with Neural Networks</a>
   </div>
 </li>
     </ul>
@@ -692,8 +692,8 @@ Solution
 Dep. Variable:                   MEDV   R-squared:                       0.552
 Model:                            OLS   Adj. R-squared:                  0.551
 Method:                 Least Squares   F-statistic:                     495.9
-Date:                Tue, 13 Sep 2022   Prob (F-statistic):           3.76e-72
-Time:                        16:30:14   Log-Likelihood:                -1310.5
+Date:                Mon, 19 Sep 2022   Prob (F-statistic):           3.76e-72
+Time:                        23:35:33   Log-Likelihood:                -1310.5
 No. Observations:                 404   AIC:                             2625.
 Df Residuals:                     402   BIC:                             2633.
 Df Model:                           1                                         
@@ -912,8 +912,8 @@ Solution
 Dep. Variable:                   MEDV   R-squared:                       0.738
 Model:                            OLS   Adj. R-squared:                  0.730
 Method:                 Least Squares   F-statistic:                     84.65
-Date:                Tue, 13 Sep 2022   Prob (F-statistic):          8.21e-105
-Time:                        16:30:17   Log-Likelihood:                -1202.0
+Date:                Mon, 19 Sep 2022   Prob (F-statistic):          8.21e-105
+Time:                        23:35:36   Log-Likelihood:                -1202.0
 No. Observations:                 404   AIC:                             2432.
 Df Residuals:                     390   BIC:                             2488.
 Df Model:                          13                                         
@@ -996,8 +996,8 @@ Solution
 Dep. Variable:                   MEDV   R-squared:                       0.738
 Model:                            OLS   Adj. R-squared:                  0.730
 Method:                 Least Squares   F-statistic:                     91.94
-Date:                Tue, 13 Sep 2022   Prob (F-statistic):          8.39e-106
-Time:                        16:30:18   Log-Likelihood:                -1202.0
+Date:                Mon, 19 Sep 2022   Prob (F-statistic):          8.39e-106
+Time:                        23:35:37   Log-Likelihood:                -1202.0
 No. Observations:                 404   AIC:                             2430.
 Df Residuals:                     391   BIC:                             2482.
 Df Model:                          12                                         
@@ -1043,8 +1043,8 @@ strong multicollinearity or other numerical problems.</code></pre>
 Dep. Variable:                   MEDV   R-squared:                       0.738
 Model:                            OLS   Adj. R-squared:                  0.730
 Method:                 Least Squares   F-statistic:                     91.94
-Date:                Tue, 13 Sep 2022   Prob (F-statistic):          8.37e-106
-Time:                        16:30:18   Log-Likelihood:                -1202.0
+Date:                Mon, 19 Sep 2022   Prob (F-statistic):          8.37e-106
+Time:                        23:35:37   Log-Likelihood:                -1202.0
 No. Observations:                 404   AIC:                             2430.
 Df Residuals:                     391   BIC:                             2482.
 Df Model:                          12                                         
@@ -1161,8 +1161,8 @@ Solution
 Dep. Variable:                   MEDV   R-squared:                       0.787
 Model:                            OLS   Adj. R-squared:                  0.780
 Method:                 Least Squares   F-statistic:                     111.1
-Date:                Tue, 13 Sep 2022   Prob (F-statistic):          3.07e-122
-Time:                        16:30:19   Log-Likelihood:                -1160.0
+Date:                Mon, 19 Sep 2022   Prob (F-statistic):          3.07e-122
+Time:                        23:35:38   Log-Likelihood:                -1160.0
 No. Observations:                 404   AIC:                             2348.
 Df Residuals:                     390   BIC:                             2404.
 Df Model:                          13                                         
