--- a/courses/MLEfreiS7/index.html
+++ b/courses/MLEfreiS7/index.html
@@ -130,7 +130,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./TD4.html" class="sidebar-item-text sidebar-link">Lab4: Neural Networks</a>
+  <a href="./TD4.html" class="sidebar-item-text sidebar-link">Lab4: Starting with Neural Networks</a>
   </div>
 </li>
     </ul>
